<resources>
    <string name="app_name">Chatters</string>
    <string name="_start_reg_button">NEED A NEW ACCOUNT</string>
    <string name="start_login_button">Already Registered</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="username">UserName</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email id</string>
    <string name="chatters">Chatters</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to_chatters_app">Welcome To Chatters App</string>
    <string name="already_have_account">Already Have Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey_this_is_your_status">Hey this is Your Status</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_status">Change Status</string>
    <string name="hey_what_on_your_mind">Hey What On Your mind</string>
    <string name="save_changes">Save Changes</string>
    <string name="all_users">All Users</string>
    <string name="display_name">Display Name</string>
    <string name="user_default_status">User Default Status</string>
    <string name="symbol_string_crop_image_activity_no_permissions">symbol @string/crop_image_activity_no_permissions</string>
    <string name="current_status">Current Status</string>
    <string name="all_friends">All Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="profile_photo_single">profile photo</string>
    <string name="online_button_green">online button</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign-In</string>
    <string name="double_space_chatters">Chatters</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="add">add</string>
    <string name="enter_your_text_here">Enter Your Text here</string>
    <string name="send">send</string>
    <string name="conform_password">Conform Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="profile_photos">profile photo</string>
    <string name="last_seen">Last Seen</string>
    <string-array name="gender">
        <item>Default</item>
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
</resources>
