<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/single_user_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/profile_photo_single"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/single_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textAllCaps="true"
        android:layout_alignTop="@+id/single_user_image"
        android:layout_marginStart="113dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/display_name"
        android:textColor="@color/orange"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/single_user_name"
        android:layout_marginTop="44dp"
        android:text="@string/user_default_status"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/onlineStatusImage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/single_user_image"
        android:layout_marginEnd="59dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/online"
        android:contentDescription="@string/online_button_green" />

</RelativeLayout>