<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/custom_bar_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/profile_photo_single"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/chat_custom_bar_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/display_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/chat_custom_bar_last_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/chat_custom_bar_user_name"
        android:layout_below="@+id/chat_custom_bar_user_name"
        android:text="@string/last_seen"
        android:textSize="13sp" />
</RelativeLayout>