<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Ui.Activities.ChatActivity">

    <include
        android:id="@+id/chatBarLayout"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/message_swipe_layout"
        android:layout_above="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chatBarLayout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mesaage_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="47dp"
            android:background="@color/white" />
    </android.support.v4.widget.SwipeRefreshLayout>
        <LinearLayout
            android:id="@+id/linear"
            android:gravity="center|bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/chat_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/add"
                android:src="@drawable/add" />

        <EditText
            android:id="@+id/chat_message_view"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="text"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:hint="@string/enter_your_text_here"
            android:paddingTop="10dp"
            android:textColorHint="@color/green"
            android:textSize="16sp"

            />

        <ImageButton
            android:id="@+id/chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:contentDescription="@string/send"
            android:src="@drawable/send" />


    </LinearLayout>

</RelativeLayout>